bynkc/tests/fixtures/positive/73_context_consumes_context/src/commerce/orders.karn
context commerce.orders {
  consumes commerce.payment

  exports opaque { OrderId }

  type OrderId = String where Matches("ORD-[0-9]+")
}
