bynkc/tests/fixtures/negative/79_alias_used_twice/src/commerce/shipping.karn
context commerce.shipping

exports opaque { ShipmentId }

type ShipmentId = String where Matches("SHP-[0-9]{8}")
